--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,15 +1,9 @@
 ---
-title: 'Blog Post number 1'
-date: 2012-08-14
-permalink: /posts/2012/08/blog-post-1/
-tags:
-  - cool posts
-  - category1
-  - category2
+title: 'Understanding Depthwise Separable Convolutions'
+date: 2023-06-24
+permalink: /posts/20230624-separable-convs-notes/
+
 ---
-
-# Understanding Depthwise Separable Convolutions
-
 Depthwise separable convolutions, also known as separable convolutions, are an innovative method to minimize the computational cost and the number of parameters involved in a convolution operation. This feature leads to more efficient convolutional neural network (CNN) layers and in some scenarios, even better performance.
 
 ## **Traditional Convolution vs Separable Convolution**
